# dotfiles

./: README.md  bashrc  clang-format  condarc  ctags  gitconfig  gitignore  tmux.conf  tmux.conf.macOS  vimrc  workflow.md
VSCode/: settings.json  setup-extensions.md
VSCode/vscode_cpp/: tasks.json
git_template/hooks/: ctags
mm/: toolenv-lock.yml  toolenv.yml
notes/: compilers.md  cpp.md  ctags-vim-git.md  gdb.md  linux.md  misc.md  python.md  ssh.md  systems.md  tmux.md  vim.md  workflow.md
notes/cmake/: conda.cmake
notes/pybind-benchmarks/: CMakeLists.txt  README.md  benchmark.h  benchmark.py  benchmark_boost.cpp  benchmark_pybind11.cpp
vim/: .netrwhist
vim/colors/: molokai-custom.vim
vscode/vscode_cpp/: launch.json
vscode/vscode_py/: launch.json  settings.json
